<resources>
    <!-- Other string resources-->

    <string name="username">Username:</string>
    <string name="github_username">Github Username</string>
    <string name="app_name">Github User List</string>
    <string name="company">Company:</string>
    <string name="company_name">Company Name</string>
    <string name="is_admin">Admin Rights:</string>
    <string name="default_data">0</string>
    <string name="link">Link: </string>
    <string name="github_user_name">Github User Name</string>
    <string name="default_company">Minatosoft</string>
    <string name="default_location">Home</string>
    <string name="location">Location:</string>
    <string name="repository">Repository:</string>
    <string name="share">share</string>
    <string name="welcome">Welcome</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Followings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="search_username">Search Username</string>
    <string name="follower">Follower:</string>
    <string name="following">Following:</string>
    <string name="default_github_link">http://www.github.com/user/Luka</string>
</resources>


